--- a/index.html
+++ b/index.html
@@ -9,83 +9,89 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-:root{
-  --green:#0a8a3a;
-  --light:#f6fff7;
-}
+:root{--green:#0a8a3a;--light:#f7fff8}
 *{box-sizing:border-box}
 body{margin:0;font-family:Poppins,sans-serif;background:var(--light)}
 
 header{background:var(--green);position:sticky;top:0;z-index:999}
-nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:15px;color:#fff}
+nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
+.logo{display:flex;align-items:center;gap:10px;font-weight:700}
+.logo img{height:45px}
 nav a{color:#fff;margin-left:15px;text-decoration:none;font-weight:500;cursor:pointer}
 
 .hero{
-  height:85vh;
-  background:url("https://images.unsplash.com/photo-1588072432836-e10032774350") center/cover;
-  display:flex;align-items:center;justify-content:center;
-  text-align:center;color:#fff;
+height:85vh;
+background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.6)),
+url("https://images.unsplash.com/photo-1588072432836-e10032774350") center/cover;
+display:flex;align-items:center;justify-content:center;text-align:center;color:#fff
 }
-.hero h1{font-size:48px;animation:fadeIn 2s}
-.hero p{font-size:20px}
-.btn{background:var(--green);padding:14px 30px;color:#fff;border-radius:6px;text-decoration:none}
-
-@keyframes fadeIn{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:translateY(0)}
-}
+.hero img{height:90px;margin-bottom:15px}
+.hero h1{font-size:46px}
+.hero p{font-size:20px;max-width:700px;margin:auto}
+.btn{display:inline-block;margin-top:20px;padding:14px 34px;background:var(--green);color:#fff;border-radius:6px;text-decoration:none}
 
 .container{max-width:1200px;margin:auto;padding:60px 20px}
 h2{text-align:center;color:var(--green)}
 
 .features{
-  display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px;margin-top:40px
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:25px;margin-top:40px
 }
-.feature{background:#eaffea;padding:25px;border-radius:12px;text-align:center}
+.feature{
+background:#eaffea;padding:30px;border-radius:12px;
+text-align:center;border:1px solid #c8f5d4
+}
 
-.slider{overflow:hidden;position:relative}
-.track{display:flex;transition:0.6s}
-.slide{min-width:100%;display:flex;gap:20px;justify-content:center;flex-wrap:wrap}
+.slider{overflow:hidden}
+.track{display:flex;animation:slide 18s infinite}
+.slide{display:flex;gap:20px;min-width:100%;justify-content:center}
+
+@keyframes slide{
+0%,20%{transform:translateX(0)}
+25%,45%{transform:translateX(-100%)}
+50%,70%{transform:translateX(-200%)}
+75%,100%{transform:translateX(0)}
+}
 
 .card{
-  background:#fff;padding:20px;border-radius:12px;
-  box-shadow:0 8px 20px rgba(0,0,0,.1);
-  text-align:center;width:250px
+background:#fff;padding:20px;border-radius:12px;
+box-shadow:0 6px 18px rgba(0,0,0,.1);
+text-align:center;width:250px
 }
-.card img{
-  width:120px;height:120px;border-radius:50%;
-  object-fit:cover;margin-bottom:10px
-}
-.controls{text-align:center;margin-top:15px}
-.controls button{
-  background:var(--green);color:#fff;border:none;
-  padding:10px 14px;border-radius:6px;margin:0 5px
-}
+.card img{width:120px;height:120px;border-radius:50%;object-fit:cover}
 
-/* Gallery */
 .gallery img{
-  width:300px;border-radius:12px;
-  transition:.3s
+width:280px;border-radius:12px;transition:.3s
 }
 .gallery img:hover{transform:scale(1.05)}
 
-/* Modal */
-.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.6)}
+.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:1000}
 .modal-box{
-  background:#fff;max-width:600px;margin:5% auto;
-  padding:30px;border-radius:12px;position:relative
+background:#fff;max-width:800px;margin:5% auto;
+padding:30px;border-radius:14px;position:relative
 }
 .close{position:absolute;top:10px;right:15px;font-size:26px;cursor:pointer}
+
 input,select,textarea{
-  width:100%;padding:12px;margin:6px 0;border-radius:6px;border:1px solid #ccc
+width:100%;padding:12px;margin:8px 0;
+border:1px solid #ccc;border-radius:6px
 }
 
 footer{background:var(--green);color:#fff;padding:40px 20px}
-.footer-grid{max-width:1200px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
+.footer-grid{
+max-width:1200px;margin:auto;
+display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:30px
+}
+.social a{color:#fff;font-size:22px;margin-right:12px}
+.whatsapp{
+display:inline-block;margin-top:10px;padding:10px 18px;
+background:#25D366;color:#fff;border-radius:6px;text-decoration:none
+}
 
 @media(max-width:768px){
-  .hero h1{font-size:32px}
+.hero h1{font-size:32px}
 }
 </style>
 </head>
@@ -94,137 +100,135 @@ footer{background:var(--green);color:#fff;padding:40px 20px}
 
 <header>
 <nav>
-  <strong>AL-NOOR PUBLIC SCHOOL</strong>
-  <div>
-    <a onclick="go('home')">Home</a>
-    <a onclick="go('about')">About</a>
-    <a onclick="go('teachers')">Teachers</a>
-    <a onclick="go('gallery')">Gallery</a>
-    <a onclick="go('contact')">Contact</a>
-  </div>
+<div class="logo">
+<img src="https://via.placeholder.com/80x80?text=LOGO">
+AL-NOOR PUBLIC SCHOOL
+</div>
+<div>
+<a onclick="go('home')">Home</a>
+<a onclick="go('about')">About</a>
+<a onclick="go('teachers')">Teachers</a>
+<a onclick="go('gallery')">Gallery</a>
+<a onclick="go('contact')">Contact</a>
+</div>
 </nav>
 </header>
 
 <section class="hero" id="home">
-  <div>
-    <h1>Best School For Your Kids</h1>
-    <p>Quality Education • Discipline • Values</p><br>
-    <a class="btn" onclick="openForm()">Apply for Admission</a>
-  </div>
+<div>
+<img src="https://via.placeholder.com/120x120?text=LOGO">
+<h1>Welcome to Al-Noor Public School Manglour</h1>
+<p>Empowering Young Minds for a Brighter Future. Where Quality Education Meets Care and Discipline Shaping Young Minds with Quality Education, Discipline & Moral Values</p>
+<a class="btn" onclick="openForm()">Apply for Admission</a>
+</div>
 </section>
 
 <section class="container" id="about">
 <h2>About Us</h2>
-<p style="text-align:center">
-Al-Noor Public School Manglour provides quality education from Nursery to Class 10 with discipline, safety and values.
+<p style="text-align:center;max-width:900px;margin:auto">
+Al-Noor Public School Manglour is committed to providing a safe, disciplined and inspiring
+learning environment from Nursery to Class 10, nurturing students for a bright future.
 </p>
 </section>
 
 <section class="container">
 <h2>Why Choose Us</h2>
 <div class="features">
-  <div class="feature">📘 Quality Education</div>
-  <div class="feature">🏫 Safe Campus</div>
-  <div class="feature">🎓 Nursery to Class 10</div>
+<div class="feature">📘 Excellence in Academics & Moral Education</div>
+<div class="feature">🏫 Safe, Secure & Child-Friendly Campus</div>
+<div class="feature">🎓 Complete Schooling from Nursery to Class 10</div>
 </div>
 </section>
 
 <section class="container" id="teachers">
 <h2>Meet Our Teachers</h2>
 <div class="slider">
-<div class="track" id="tTrack">
+<div class="track">
 <div class="slide">
-  <div class="card">
-    <img src="https://randomuser.me/api/portraits/women/65.jpg">
-    <h4>Principal<br>Nuzhat Saifi</h4><p>10 Years</p>
-  </div>
-  <div class="card">
-    <img src="https://randomuser.me/api/portraits/men/32.jpg">
-    <h4>Manager<br>Mohd Shahzad</h4><p>10 Years</p>
-  </div>
-  <div class="card">
-    <img src="https://randomuser.me/api/portraits/men/45.jpg">
-    <h4>Manager<br>Mohd Sajid</h4><p>10 Years</p>
-  </div>
+<div class="card"><img src="https://randomuser.me/api/portraits/women/65.jpg"><h4>Nuzhat Saifi</h4><p>Principal<br>10 Years</p></div>
+<div class="card"><img src="https://randomuser.me/api/portraits/men/32.jpg"><h4>Mohd Shahzad</h4><p>Manager<br>10 Years</p></div>
+<div class="card"><img src="https://randomuser.me/api/portraits/men/45.jpg"><h4>Mohd Sajid</h4><p>Manager<br>10 Years</p></div>
 </div>
-
 <div class="slide">
-  <div class="card">
-    <img src="https://randomuser.me/api/portraits/women/44.jpg">
-    <h4>Misba</h4><p>6 Years</p>
-  </div>
-  <div class="card">
-    <img src="https://randomuser.me/api/portraits/men/78.jpg">
-    <h4>Arshad</h4><p>15 Years</p>
-  </div>
-  <div class="card">
-    <img src="https://randomuser.me/api/portraits/women/52.jpg">
-    <h4>Shayma</h4><p>5 Years</p>
-  </div>
+<div class="card"><img src="https://randomuser.me/api/portraits/women/44.jpg"><h4>Misba</h4><p>6 Years</p></div>
+<div class="card"><img src="https://randomuser.me/api/portraits/men/78.jpg"><h4>Arshad</h4><p>15 Years</p></div>
+<div class="card"><img src="https://randomuser.me/api/portraits/women/52.jpg"><h4>Shayma</h4><p>5 Years</p></div>
 </div>
 </div>
-</div>
-<div class="controls">
-<button onclick="slideT(-1)">❮</button>
-<button onclick="slideT(1)">❯</button>
 </div>
 </section>
 
 <section class="container" id="gallery">
 <h2>Gallery</h2>
-<div class="gallery slide">
-<img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf">
+<div class="slider">
+<div class="track gallery">
+<img src="https://images.unsplash.com/photo-1509062522246-3755977927d7">
 <img src="https://images.unsplash.com/photo-1596495577886-d920f1fb7238">
 <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f">
-<img src="https://images.unsplash.com/photo-1509062522246-3755977927d7">
+<img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf">
+<img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b">
+<img src="https://images.unsplash.com/photo-1577896851231-70ef18881754">
+</div>
 </div>
 </section>
 
 <section class="container">
 <h2>What Parents Say</h2>
-<div class="slide">
-  <div class="card">"Best school environment."<br><b>- Parent</b></div>
-  <div class="card">"Teachers are very caring."<br><b>- Parent</b></div>
+<div class="features">
+<div class="feature">"Excellent discipline and caring teachers."</div>
+<div class="feature">"Best school environment for children."</div>
+<div class="feature">"Teachers focus on values and studies."</div>
+<div class="feature">"Safe campus and quality education."</div>
+<div class="feature">"Very satisfied with my child’s progress."</div>
+<div class="feature">"Highly recommended school."</div>
 </div>
 </section>
 
 <footer id="contact">
 <div class="footer-grid">
 <div>
-<h3>Contact</h3>
-<p>Manglour, Uttarakhand</p>
-<p>📞 7017152544</p>
+<h3>GET IN TOUCH</h3>
+<p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
+<p>📞 +91-7017152544<br>📞 +91-8439221040</p>
+<p>✉ apschool@gmail.com</p>
 </div>
 <div>
-<h3>Social</h3>
-<i class="fab fa-facebook"></i>
-<i class="fab fa-instagram"></i>
-<i class="fab fa-youtube"></i>
+<h3>CONNECT WITH US</h3>
+<div class="social">
+<a><i class="fab fa-facebook"></i></a>
+<a><i class="fab fa-instagram"></i></a>
+<a><i class="fab fa-x-twitter"></i></a>
+<a><i class="fab fa-linkedin"></i></a>
+<a><i class="fab fa-youtube"></i></a>
+</div>
+<a class="whatsapp" href="https://wa.me/917017152544">WhatsApp</a><br>
+<a class="whatsapp" href="https://wa.me/918439221040">WhatsApp</a>
 </div>
 </div>
-<p style="text-align:center">© 2025 AL-NOOR PUBLIC SCHOOL</p>
+<p style="text-align:center;margin-top:30px">© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
 </footer>
 
-<!-- MODAL -->
+<!-- ADMISSION FORM (OLD STYLE FIXED) -->
 <div class="modal" id="form">
 <div class="modal-box">
 <span class="close" onclick="closeForm()">×</span>
 <h2>Admission Form</h2>
-<input placeholder="Student Name">
-<input placeholder="Father Name">
-<input placeholder="Phone">
-<select><option>Class</option></select>
+<input placeholder="First Name" required>
+<input placeholder="Last Name" required>
+<select required><option>Gender</option><option>Male</option><option>Female</option></select>
+<input placeholder="Phone Number" required>
+<input placeholder="Father's Name">
+<input placeholder="Mother's Name">
+<select><option>Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
+<input placeholder="Previous Class Passed">
+<input placeholder="Aadhar Number">
+<input type="file">
 <textarea placeholder="Address"></textarea>
-<button class="btn">Submit</button>
+<button class="btn">Submit Application</button>
 </div>
 </div>
 
 <script>
-let t=0;
-function slideT(d){
-  t=(t+d+2)%2;
-  document.getElementById("tTrack").style.transform=`translateX(-${t*100}%)`;
-}
 function openForm(){document.getElementById("form").style.display="block"}
 function closeForm(){document.getElementById("form").style.display="none"}
 function go(id){document.getElementById(id).scrollIntoView({behavior:"smooth"})}
