--- a/index.html
+++ b/index.html
@@ -10,88 +10,127 @@
 
 <style>
 :root{--green:#0a8a3a;--light:#f7fff8}
-*{box-sizing:border-box}
-body{margin:0;font-family:Poppins,sans-serif;background:var(--light)}
+*{box-sizing:border-box;margin:0;padding:0}
+body{font-family:Poppins,sans-serif;background:var(--light);line-height:1.6}
 
 header{background:var(--green);position:sticky;top:0;z-index:999}
 nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
 .logo{display:flex;align-items:center;gap:10px;font-weight:700}
 .logo img{height:45px}
-nav a{color:#fff;margin-left:15px;text-decoration:none;font-weight:500;cursor:pointer}
+nav a{color:#fff;margin-left:15px;text-decoration:none;font-weight:500}
 
 .hero{
-height:85vh;
+min-height:85vh;
 background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.6)),
 url("https://images.unsplash.com/photo-1588072432836-e10032774350") center/cover;
-display:flex;align-items:center;justify-content:center;text-align:center;color:#fff
+display:flex;align-items:center;justify-content:center;
+text-align:center;color:#fff;padding:20px
 }
 .hero img{height:90px;margin-bottom:15px}
-.hero h1{font-size:46px}
-.hero p{font-size:20px;max-width:700px;margin:auto}
+.hero h1{font-size:42px}
+.hero p{max-width:800px;margin:auto;font-size:18px}
 .btn{display:inline-block;margin-top:20px;padding:14px 34px;background:var(--green);color:#fff;border-radius:6px;text-decoration:none}
 
 .container{max-width:1200px;margin:auto;padding:60px 20px}
-h2{text-align:center;color:var(--green)}
+h2{text-align:center;color:var(--green);margin-bottom:20px}
 
 .features{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:25px;margin-top:40px
+gap:20px
 }
 .feature{
-background:#eaffea;padding:30px;border-radius:12px;
+background:#eaffea;padding:25px;border-radius:12px;
 text-align:center;border:1px solid #c8f5d4
 }
 
-.slider{overflow:hidden}
-.track{display:flex;animation:slide 18s infinite}
-.slide{display:flex;gap:20px;min-width:100%;justify-content:center}
-
-@keyframes slide{
-0%,20%{transform:translateX(0)}
-25%,45%{transform:translateX(-100%)}
-50%,70%{transform:translateX(-200%)}
-75%,100%{transform:translateX(0)}
+/* ================= TEACHERS GRID ================= */
+.teacher-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+gap:25px;
+margin-top:40px
 }
-
 .card{
-background:#fff;padding:20px;border-radius:12px;
-box-shadow:0 6px 18px rgba(0,0,0,.1);
-text-align:center;width:250px
+background:#fff;padding:20px;border-radius:14px;
+box-shadow:0 6px 18px rgba(0,0,0,.08);
+text-align:center
 }
-.card img{width:120px;height:120px;border-radius:50%;object-fit:cover}
-
-.gallery img{
-width:280px;border-radius:12px;transition:.3s
+.card img{
+width:120px;height:120px;border-radius:50%;
+object-fit:cover;margin-bottom:10px
 }
-.gallery img:hover{transform:scale(1.05)}
+.card h4{margin:8px 0 5px}
 
-.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:1000}
+/* ================= GALLERY GRID ================= */
+.gallery-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+gap:20px;
+margin-top:30px
+}
+.gallery-grid img{
+width:100%;
+border-radius:12px;
+transition:.3s;
+object-fit:cover
+}
+.gallery-grid img:hover{transform:scale(1.04)}
+
+/* ================= MODAL FORM ================= */
+.modal{
+display:none;
+position:fixed;
+inset:0;
+background:rgba(0,0,0,.6);
+z-index:1000;
+display:flex;
+align-items:center;
+justify-content:center;
+}
 .modal-box{
-background:#fff;max-width:800px;margin:5% auto;
-padding:30px;border-radius:14px;position:relative
+background:#fff;
+max-width:700px;
+width:90%;
+max-height:90vh;
+overflow-y:auto;
+padding:30px;
+border-radius:14px;
+position:relative
 }
-.close{position:absolute;top:10px;right:15px;font-size:26px;cursor:pointer}
-
+.close{
+position:absolute;
+top:10px;
+right:15px;
+font-size:26px;
+cursor:pointer
+}
 input,select,textarea{
 width:100%;padding:12px;margin:8px 0;
 border:1px solid #ccc;border-radius:6px
 }
 
-footer{background:var(--green);color:#fff;padding:40px 20px}
+footer{
+background:var(--green);
+color:#fff;
+padding:40px 20px
+}
 .footer-grid{
 max-width:1200px;margin:auto;
-display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
 gap:30px
 }
 .social a{color:#fff;font-size:22px;margin-right:12px}
 .whatsapp{
-display:inline-block;margin-top:10px;padding:10px 18px;
-background:#25D366;color:#fff;border-radius:6px;text-decoration:none
+display:inline-block;margin-top:10px;
+padding:10px 18px;background:#25D366;
+color:#fff;border-radius:6px;text-decoration:none
 }
 
 @media(max-width:768px){
-.hero h1{font-size:32px}
+.hero h1{font-size:30px}
+.hero p{font-size:16px}
 }
 </style>
 </head>
@@ -101,24 +140,24 @@ background:#25D366;color:#fff;border-radius:6px;text-decoration:none
 <header>
 <nav>
 <div class="logo">
-<img src="https://via.placeholder.com/80x80?text=LOGO">
+<img src="logo.png">
 AL-NOOR PUBLIC SCHOOL
 </div>
 <div>
-<a onclick="go('home')">Home</a>
-<a onclick="go('about')">About</a>
-<a onclick="go('teachers')">Teachers</a>
-<a onclick="go('gallery')">Gallery</a>
-<a onclick="go('contact')">Contact</a>
+<a href="#home">Home</a>
+<a href="#about">About</a>
+<a href="#teachers">Teachers</a>
+<a href="#gallery">Gallery</a>
+<a href="#contact">Contact</a>
 </div>
 </nav>
 </header>
 
 <section class="hero" id="home">
 <div>
-<img src="https://via.placeholder.com/120x120?text=LOGO">
+<img src="logo.png">
 <h1>Welcome to Al-Noor Public School Manglour</h1>
-<p>Empowering Young Minds for a Brighter Future. Where Quality Education Meets Care and Discipline Shaping Young Minds with Quality Education, Discipline & Moral Values</p>
+<p>Shaping young minds with quality education, discipline & moral values.</p>
 <a class="btn" onclick="openForm()">Apply for Admission</a>
 </div>
 </section>
@@ -126,97 +165,65 @@ AL-NOOR PUBLIC SCHOOL
 <section class="container" id="about">
 <h2>About Us</h2>
 <p style="text-align:center;max-width:900px;margin:auto">
-Al-Noor Public School Manglour is committed to providing a safe, disciplined and inspiring
-learning environment from Nursery to Class 10, nurturing students for a bright future.
+Al-Noor Public School Manglour provides quality education from Nursery to Class 10 in a safe and disciplined environment.
 </p>
 </section>
 
 <section class="container">
 <h2>Why Choose Us</h2>
 <div class="features">
-<div class="feature">📘 Excellence in Academics & Moral Education</div>
-<div class="feature">🏫 Safe, Secure & Child-Friendly Campus</div>
-<div class="feature">🎓 Complete Schooling from Nursery to Class 10</div>
+<div class="feature">📘 Excellence in Academics</div>
+<div class="feature">🏫 Safe & Secure Campus</div>
+<div class="feature">🎓 Nursery to Class 10</div>
 </div>
 </section>
 
 <section class="container" id="teachers">
 <h2>Meet Our Teachers</h2>
 
-<div class="slider">
-  <div class="track">
-    <div class="slide">
+<div class="teacher-grid">
 
-      <div class="card">
-        <img src="https://instasize.com/p/106b33125bea7ac94542f77ad68ea2504811cb3b55cc17e2dc3974a270cf305a">
-        <h4>Nuzhat Saifi</h4>
-        <p><strong>Principal</strong><br>Experience - 10 Years</p>
-      </div>
+<div class="card">
+<img src="IMG-20231224-WA0013.jpg">
+<h4>Nuzhat Saifi</h4>
+<p><strong>Principal</strong><br>10 Years Experience</p>
+</div>
 
-      <div class="card">
-        <img src="https://instasize.com/p/8d62545d86a2f2721de7517d4dc9079e57eabe9997f76538ba54cb6b84f1c554">
-        <h4>Mohd Shahzad</h4>
-        <p><strong>Manager</strong><br>Experience - 10 Years</p>
-      </div>
+<div class="card">
+<img src="150-200.jpg">
+<h4>Mohd Sajid</h4>
+<p><strong>Manager</strong><br>10 Years Experience</p>
+</div>
 
-      <div class="card">
-        <img src="https://instasize.com/p/47d0048d5e93823ca47656237a3a8fda6b2d8fa7575dd6808755ef5cd1c99d56">
-        <h4>Mohd Sajid</h4>
-        <p><strong>Manager</strong><br>Experience - 10 Years</p>
-      </div>
+<div class="card">
+<img src="IMG_9371 (1).jpg">
+<h4>Mohd Shahzad</h4>
+<p><strong>Manager</strong><br>10 Years Experience</p>
+</div>
 
-      <div class="card">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg">
-        <h4>Misba</h4>
-        <p>Experience - 6 Years</p>
-      </div>
+<div class="card">
+<img src="https://randomuser.me/api/portraits/women/44.jpg">
+<h4>Misba</h4>
+<p>6 Years Experience</p>
+</div>
 
-      <div class="card">
-        <img src="https://randomuser.me/api/portraits/men/78.jpg">
-        <h4>Arshad Ali</h4>
-        <p>Experience - 15 Years</p>
-      </div>
+<div class="card">
+<img src="https://randomuser.me/api/portraits/men/78.jpg">
+<h4>Arshad Ali</h4>
+<p>15 Years Experience</p>
+</div>
 
-      <div class="card">
-        <img src="https://randomuser.me/api/portraits/women/52.jpg">
-        <h4>Shayma</h4>
-        <p>Experience - 5 Years</p>
-      </div>
-        
-        <div class="card">
-        <img src="https://randomuser.me/api/portraits/women/52.jpg">
-        <h4>Alisha Naaz</h4>
-        <p>Experience - 5 Years</p>
-      </div>
-
-    </div>
-  </div>
 </div>
 </section>
 
 <section class="container" id="gallery">
 <h2>Gallery</h2>
-<div class="slider">
-<div class="track gallery">
+<div class="gallery-grid">
 <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7">
 <img src="https://images.unsplash.com/photo-1596495577886-d920f1fb7238">
 <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f">
-<img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf">
 <img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b">
 <img src="https://images.unsplash.com/photo-1577896851231-70ef18881754">
-</div>
-</div>
-</section>
-
-<section class="container">
-<h2>What Parents Say</h2>
-<div class="features">
-<div class="feature">"Excellent discipline and caring teachers."</div>
-<div class="feature">"Best school environment for children."</div>
-<div class="feature">"Teachers focus on values and studies."</div>
-<div class="feature">"Safe campus and quality education."</div>
-<div class="feature">"Very satisfied with my child’s progress."</div>
-<div class="feature">"Highly recommended school."</div>
 </div>
 </section>
 
@@ -224,52 +231,51 @@ learning environment from Nursery to Class 10, nurturing students for a bright f
 <div class="footer-grid">
 <div>
 <h3>GET IN TOUCH</h3>
-<p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
-<p>📞 +91-7017152544<br>📞 +91-8439221040</p>
+<p>Malakpura Road, Manglour</p>
+<p>📞 +91-7017152544</p>
 <p>✉ apschool@gmail.com</p>
 </div>
+
 <div>
 <h3>CONNECT WITH US</h3>
 <div class="social">
-<a><i class="fab fa-facebook"></i></a>
-<a><i class="fab fa-instagram"></i></a>
-<a><i class="fab fa-x-twitter"></i></a>
-<a><i class="fab fa-linkedin"></i></a>
-<a><i class="fab fa-youtube"></i></a>
+<i class="fab fa-facebook"></i>
+<i class="fab fa-instagram"></i>
+<i class="fab fa-youtube"></i>
 </div>
-<a class="whatsapp" href="https://wa.me/917017152544">WhatsApp</a><br>
-<a class="whatsapp" href="https://wa.me/918439221040">WhatsApp</a>
+<a class="whatsapp" href="https://wa.me/917017152544">WhatsApp</a>
 </div>
 </div>
-<p style="text-align:center;margin-top:30px">© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
+
+<p style="text-align:center;margin-top:20px">© 2025 AL-NOOR PUBLIC SCHOOL</p>
 </footer>
 
-<!-- ADMISSION FORM (OLD STYLE FIXED) -->
 <div class="modal" id="form">
 <div class="modal-box">
 <span class="close" onclick="closeForm()">×</span>
 <h2>Admission Form</h2>
-<input placeholder="First Name" required>
-<input placeholder="Last Name" required>
-<select required><option>Gender</option><option>Male</option><option>Female</option></select>
-<input placeholder="Phone Number" required>
+<input placeholder="First Name">
+<input placeholder="Last Name">
+<select><option>Gender</option><option>Male</option><option>Female</option></select>
+<input placeholder="Phone Number">
 <input placeholder="Father's Name">
 <input placeholder="Mother's Name">
-<select><option>Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
-<input placeholder="Previous Class Passed">
-<input placeholder="Aadhar Number">
-<input type="file">
+<select>
+<option>Applying Class</option>
+<option>Nursery</option><option>1</option><option>2</option>
+<option>3</option><option>4</option><option>5</option>
+<option>6</option><option>7</option><option>8</option>
+<option>9</option><option>10</option>
+</select>
 <textarea placeholder="Address"></textarea>
-<button class="btn">Submit Application</button>
+<button class="btn">Submit</button>
 </div>
 </div>
 
 <script>
-function openForm(){document.getElementById("form").style.display="block"}
+function openForm(){document.getElementById("form").style.display="flex"}
 function closeForm(){document.getElementById("form").style.display="none"}
-function go(id){document.getElementById(id).scrollIntoView({behavior:"smooth"})}
 </script>
 
 </body>
 </html>
-
