--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:Poppins,sans-serif;background:var(--light);line-height:1.6}
 
+/* HEADER */
 header{background:var(--green);position:sticky;top:0;z-index:999}
 nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
 .logo{display:flex;align-items:center;gap:10px;font-weight:700}
 .logo img{height:45px}
 nav a{color:#fff;margin-left:15px;text-decoration:none;font-weight:500}
 
+/* HERO */
 .hero{
 min-height:85vh;
 background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.6)),
@@ -31,9 +33,11 @@ text-align:center;color:#fff;padding:20px
 .hero p{max-width:800px;margin:auto;font-size:18px}
 .btn{display:inline-block;margin-top:20px;padding:14px 34px;background:var(--green);color:#fff;border-radius:6px;text-decoration:none}
 
+/* COMMON */
 .container{max-width:1200px;margin:auto;padding:60px 20px}
 h2{text-align:center;color:var(--green);margin-bottom:20px}
 
+/* FEATURES */
 .features{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
@@ -44,12 +48,11 @@ background:#eaffea;padding:25px;border-radius:12px;
 text-align:center;border:1px solid #c8f5d4
 }
 
-/* ================= TEACHERS GRID ================= */
+/* TEACHERS GRID */
 .teacher-grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-gap:25px;
-margin-top:40px
+gap:25px;margin-top:40px
 }
 .card{
 background:#fff;padding:20px;border-radius:14px;
@@ -60,65 +63,41 @@ text-align:center
 width:120px;height:120px;border-radius:50%;
 object-fit:cover;margin-bottom:10px
 }
-.card h4{margin:8px 0 5px}
 
-/* ================= GALLERY GRID ================= */
+/* GALLERY */
 .gallery-grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-gap:20px;
-margin-top:30px
+gap:20px;margin-top:30px
 }
 .gallery-grid img{
-width:100%;
-border-radius:12px;
-transition:.3s;
-object-fit:cover
+width:100%;border-radius:12px;
+object-fit:cover;transition:.3s
 }
 .gallery-grid img:hover{transform:scale(1.04)}
 
-/* ================= MODAL FORM ================= */
+/* MODAL FORM */
 .modal{
-display:none;
-position:fixed;
-inset:0;
-background:rgba(0,0,0,.6);
-z-index:1000;
-display:flex;
-align-items:center;
-justify-content:center;
+display:none;position:fixed;inset:0;
+background:rgba(0,0,0,.6);z-index:1000;
+align-items:center;justify-content:center
 }
 .modal-box{
-background:#fff;
-max-width:700px;
-width:90%;
-max-height:90vh;
-overflow-y:auto;
-padding:30px;
-border-radius:14px;
-position:relative
+background:#fff;max-width:700px;width:90%;
+max-height:90vh;overflow-y:auto;
+padding:30px;border-radius:14px;position:relative
 }
-.close{
-position:absolute;
-top:10px;
-right:15px;
-font-size:26px;
-cursor:pointer
-}
+.close{position:absolute;top:10px;right:15px;font-size:26px;cursor:pointer}
 input,select,textarea{
 width:100%;padding:12px;margin:8px 0;
 border:1px solid #ccc;border-radius:6px
 }
 
-footer{
-background:var(--green);
-color:#fff;
-padding:40px 20px
-}
+/* FOOTER */
+footer{background:var(--green);color:#fff;padding:40px 20px}
 .footer-grid{
 max-width:1200px;margin:auto;
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
 gap:30px
 }
 .social a{color:#fff;font-size:22px;margin-right:12px}
@@ -182,7 +161,6 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 <h2>Meet Our Teachers</h2>
 
 <div class="teacher-grid">
-
 <div class="card">
 <img src="IMG-20231224-WA0013.jpg">
 <h4>Nuzhat Saifi</h4>
@@ -200,19 +178,6 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 <h4>Mohd Shahzad</h4>
 <p><strong>Manager</strong><br>10 Years Experience</p>
 </div>
-
-<div class="card">
-<img src="https://randomuser.me/api/portraits/women/44.jpg">
-<h4>Misba</h4>
-<p>6 Years Experience</p>
-</div>
-
-<div class="card">
-<img src="https://randomuser.me/api/portraits/men/78.jpg">
-<h4>Arshad Ali</h4>
-<p>15 Years Experience</p>
-</div>
-
 </div>
 </section>
 
@@ -221,7 +186,6 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 <div class="gallery-grid">
 <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7">
 <img src="https://images.unsplash.com/photo-1596495577886-d920f1fb7238">
-<img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f">
 <img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b">
 <img src="https://images.unsplash.com/photo-1577896851231-70ef18881754">
 </div>
@@ -231,25 +195,31 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 <div class="footer-grid">
 <div>
 <h3>GET IN TOUCH</h3>
-<p>Malakpura Road, Manglour</p>
-<p>📞 +91-7017152544</p>
-<p>✉ apschool@gmail.com</p>
+<p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
+<p>📞 +91-7017152544<br>📞 +91-8439221040</p>
+<p>✉ alnoorpublicschool@gmail.com</p>
 </div>
 
 <div>
 <h3>CONNECT WITH US</h3>
 <div class="social">
-<i class="fab fa-facebook"></i>
-<i class="fab fa-instagram"></i>
-<i class="fab fa-youtube"></i>
+<a><i class="fab fa-facebook"></i></a>
+<a><i class="fab fa-instagram"></i></a>
+<a><i class="fab fa-x-twitter"></i></a>
+<a><i class="fab fa-linkedin"></i></a>
+<a><i class="fab fa-youtube"></i></a>
 </div>
-<a class="whatsapp" href="https://wa.me/917017152544">WhatsApp</a>
+<a class="whatsapp" href="https://wa.me/917017152544">WhatsApp</a><br>
+<a class="whatsapp" href="https://wa.me/918439221040">WhatsApp</a>
 </div>
 </div>
 
-<p style="text-align:center;margin-top:20px">© 2025 AL-NOOR PUBLIC SCHOOL</p>
+<p style="text-align:center;margin-top:30px">
+© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR
+</p>
 </footer>
 
+<!-- ADMISSION FORM -->
 <div class="modal" id="form">
 <div class="modal-box">
 <span class="close" onclick="closeForm()">×</span>
@@ -268,13 +238,24 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 <option>9</option><option>10</option>
 </select>
 <textarea placeholder="Address"></textarea>
-<button class="btn">Submit</button>
+<button class="btn">Submit Application</button>
 </div>
 </div>
 
 <script>
-function openForm(){document.getElementById("form").style.display="flex"}
-function closeForm(){document.getElementById("form").style.display="none"}
+function openForm(){
+  localStorage.setItem("openForm","yes");
+  document.getElementById("form").style.display="flex";
+}
+function closeForm(){
+  localStorage.removeItem("openForm");
+  document.getElementById("form").style.display="none";
+}
+window.onload=function(){
+  if(localStorage.getItem("openForm")==="yes"){
+    document.getElementById("form").style.display="flex";
+  }
+}
 </script>
 
 </body>
